istio/authz/customer/authorization-order.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-customer-access-order
  namespace: come2us
spec:
  selector:
    matchLabels:
      app: order-service
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            methods: ["GET"]
            paths:
              - /coupons

              - /address
              - /address/{*}/info
              
              - /refunds/{*}/detail
              

        - operation:
            methods: ["POST"]
            paths:
              - /address
              - /refunds/*
              
        - operation:
            methods: ["PATCH"]
            paths:
              - /address/{*}/recipient
              - /address/{*}/default
              - /address/{*}/detail

        - operation:
            methods: ["DELETE"]
            paths:
              - /address/*

        - operation:
            methods: ["GET", "POST", "PATCH", "PUT", "DELETE"]
            paths:
              - /orders/customer/*

      when:
        - key: request.auth.claims[authority]
          values: ["CUSTOMER"]
